--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+gridExtra 0.9.1 (2012-08-09) 
+----------------------------------------
+
+FIX
+
+* small compatibility issue of arrangeGrob with new class of ggplot2
+
 gridExtra 0.9 (2012-01-06) 
 ----------------------------------------
 
