--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+gridExtra 1.0.0 (2014-10-05) 
+----------------------------------------
+
+CLEANUP
+
+* several buggy functions removed
+
+
 gridExtra 0.9.1 (2012-08-09) 
 ----------------------------------------
 
