--- a/vignettes/tableGrob.rmd
+++ b/vignettes/tableGrob.rmd
@@ -10,7 +10,7 @@ library(knitr)
 opts_chunk$set(message=FALSE, fig.width=4, fig.height=2)
 ```
 
-Tabular data is usually formatted outside the graphics device, e.g via LaTeX, or html tables. However, in some cases it may be convenient to display *small* tables alongside graphics. A couple of packages offer this possibility with base graphics (`plotrix`, `gmisc`); the `gridExtra` provides the pair of `tableGrob/grid.table` functions for this purpose. Note that the tables are quite inefficient, each cell containing two individual grobs.
+Tabular data is usually formatted outside the graphics device, e.g via LaTeX, or html tables. However, in some cases it may be convenient to display *small* tables alongside graphics. A couple of packages offer this possibility with base graphics (`plotrix` for instance); the `gridExtra` provides the pair of `tableGrob/grid.table` functions for this purpose. Note that the tables are quite inefficient, each cell containing two individual grobs.
 
 ```{r basic}
 library(gridExtra)
