--- a/vignettes/arrangeGrob.rmd
+++ b/vignettes/arrangeGrob.rmd
@@ -43,10 +43,10 @@ lay <- rbind(c(1,1,1,2,3),
 grid.arrange(grobs = gs, layout_matrix = lay)
 ```
 
-All cells are of equal size by default, but users may pass explicity `widths` and/or `heights` in any valid grid units,
+All cells are of equal size by default, but users may pass explicity `widths` and/or `heights` in any valid grid units, or as relative numbers (interpreted as `null`),
 
 ```{r sizes, fig.height=2}
-grid.arrange(grobs=gs[1:3], ncol=2, widths = unit(1:2, "null"), 
+grid.arrange(grobs=gs[1:3], ncol=2, widths = 1:2, 
              heights=unit(c(1,10), c("in", "mm")))
 ```
 
