--- a/vignettes/ngonGrob.rmd
+++ b/vignettes/ngonGrob.rmd
@@ -7,10 +7,10 @@ Regular polygons and ellipses in grid graphics
 
 ```{r setup, echo=FALSE, results='hide'}
 library(knitr)
-opts_chunk$set(message=FALSE, fig.width=4, fig.height=2)
+opts_chunk$set(message=FALSE, fig.width=4, fig.height=3)
 ```
 
-The `gridExtra` package provides a basic implementation of regular polygons, `ngonGrob()/grid.ngon`, and a convenience function to draw ellipses, `ellipseGrob()/grid.ellipse()`.
+The `gridExtra` package provides a basic implementation of regular polygons, `ngonGrob()/grid.ngon`, and a convenience function to draw ellipses, `ellipseGrob()/grid.ellipse()`. We illustrate below the basic usage of these vectorised functions.
 
 ```{r basic}
 library(gridExtra)
@@ -28,26 +28,26 @@ grid.newpage()
 grid.draw(g)
 ```
 
-## rotated and stretched
+## Rotated and stretched polygons
 
 ```{r rotated}
 g2 <- ngonGrob(unit(xy[,1],"cm") + unit(0.5,"npc"),
               unit(xy[,2],"cm") + unit(0.5,"npc"),
               n = seq_len(N) + 2, rho = seq_len(N),
               phase = 0, angle=pi/(seq_len(N)+2),
-              size=1:N+5)
+              size=1:N+5, gp=gpar(fill=1:N))
 
 grid.newpage()
 grid.draw(g2)
 ```
 
-# ellipse
+## Ellipses
 
 ```{r ellipse}
 g3 <- ellipseGrob(unit(xy[,1],"cm") + unit(0.5,"npc"),
                   unit(xy[,2],"cm") + unit(0.5,"npc"),
                   angle=-2*seq(0,N-1)*pi/5+pi/2,
-                  size=5, rho=1/3)
+                  size=5, rho=1/3,  gp=gpar(fill=1:N))
 
 grid.newpage()
 grid.draw(g3)
