--- a/vignettes/ngonGrob.rmd
+++ b/vignettes/ngonGrob.rmd
@@ -53,7 +53,7 @@ grid.draw(g2)
 ```{r ellipse}
 g3 <- ellipseGrob(unit(xy[,1],"cm") + unit(0.5,"npc"),
                   unit(xy[,2],"cm") + unit(0.5,"npc"),
-                  angle=-2*seq(0,N-1)*pi/5+pi/2,
+                  angle=-2*seq(0,N-1)*pi/N+pi/2,
                   size=5, rho=1/3,  gp=gpar(fill=1:N))
 
 grid.newpage()
