--- a/vignettes/arrangeGrob.rmd
+++ b/vignettes/arrangeGrob.rmd
@@ -81,10 +81,10 @@ set.seed(123)
 pl <- lapply(1:11, function(.x) 
              qplot(1:10, rnorm(10), main=paste("plot", .x)))
 ml <- marrangeGrob(pl, nrow=2, ncol=2)
-## interactive use; open new devices
-ml
 ## non-interactive use, multipage pdf
 ## ggsave("multipage.pdf", ml)
+## interactive use; calling `dev.new` multiple times
+ml
 ```
 
 
