--- a/vignettes/tableGrob.rmd
+++ b/vignettes/tableGrob.rmd
@@ -36,7 +36,7 @@ d[1,2] <- "this\nis\ntall"
 colnames(d) <- c("alpha*integral(xdx,a,infinity)", 
                  "this text\nis high", 'alpha/beta')
 
-tt <- ttheme_default(colhead=list(parse=TRUE))
+tt <- ttheme_default(colhead=list(fg_params = list(parse=TRUE)))
 grid.table(d, theme=tt)
 
 ```
@@ -46,10 +46,12 @@ grid.table(d, theme=tt)
 The formatting is controlled by *themes*, which are nested lists of graphical parameters. See `ttheme_default` and `ttheme_minimal` for two built-in examples. Changing a few parameters at a time amounts to modifying the list with the new values.
 
 ```{r theme, fig.width=8}
-tt1 <- ttheme_default()
+tt1 <- ttheme_default(core=list(fg_params=list(fontface=3)))
 tt2 <- ttheme_minimal()
-tt3 <- ttheme_minimal(core=list(bg.par = list(fill = blues9, col=NA)), 
-                      colhead=list(fg.par=list(col="navyblue")))
+tt3 <- ttheme_minimal(core=list(bg_params = list(fill = blues9, 
+                                                 col=NA)), 
+                      colhead=list(fg_params=list(col="navyblue")))
+
 grid.arrange(
   tableGrob(iris[1:4, 1:2], theme=tt1),
   tableGrob(iris[1:4, 1:2], theme=tt2),
@@ -63,10 +65,10 @@ The text labels can be justified; the default is "centre" for the core, header, 
 
 ```{r justify, fig.width=8}
 tt1 <- ttheme_default()
-tt2 <- ttheme_default(core=list(fg.par=list(hjust=1, x=0.9)),
-                      rowhead=list(fg.par=list(hjust=1, x=0.95)))
-tt3 <- ttheme_default(core=list(fg.par=list(hjust=0, x=0.1)),
-                      rowhead=list(fg.par=list(hjust=0, x=0)))
+tt2 <- ttheme_default(core=list(fg_params=list(hjust=1, x=0.9)),
+                      rowhead=list(fg_params=list(hjust=1, x=0.95)))
+tt3 <- ttheme_default(core=list(fg_params=list(hjust=0, x=0.1)),
+                      rowhead=list(fg_params=list(hjust=0, x=0)))
 grid.arrange(
   tableGrob(mtcars[1:4, 1:2], theme=tt1),
   tableGrob(mtcars[1:4, 1:2], theme=tt2),
