--- a/vignettes/tableGrob.rmd
+++ b/vignettes/tableGrob.rmd
@@ -46,11 +46,13 @@ grid.table(d, theme=tt)
 The formatting is controlled by *themes*, which are nested lists of graphical parameters. See `ttheme_default` and `ttheme_minimal` for two built-in examples. Changing a few parameters at a time amounts to modifying the list with the new values.
 
 ```{r theme, fig.width=8}
-tt1 <- ttheme_default(core=list(fg_params=list(fontface=3)))
+tt1 <- ttheme_default()
 tt2 <- ttheme_minimal()
-tt3 <- ttheme_minimal(core=list(bg_params = list(fill = blues9, 
-                                                 col=NA)), 
-                      colhead=list(fg_params=list(col="navyblue")))
+tt3 <- ttheme_minimal(
+  core=list(bg_params = list(fill = blues9, col=NA),
+            fg_params=list(fontface=3)), 
+  colhead=list(fg_params=list(col="navyblue")),
+  rowhead=list(fg_params=list(col="navyblue", fontface=2L)))
 
 grid.arrange(
   tableGrob(iris[1:4, 1:2], theme=tt1),
@@ -87,7 +89,19 @@ grid.arrange(rectGrob(), rectGrob(), nrow=1)
 grid.arrange(g, g2, nrow=1, newpage = FALSE)
 ```
 
-We may also access individual cells, e.g. to highlight a value.
+Other grobs such as separating lines may be added.
+
+```{r separators}
+g <- tableGrob(iris[1:4, 1:3], theme=ttheme_minimal())
+separators <- replicate(ncol(g) - 2, 
+                     segmentsGrob(x1 = unit(0,"npc")), 
+                     simplify=FALSE)
+g <- gtable::gtable_add_grob(g, grobs = separators, 
+                     t = 1, b = nrow(g), l = seq_len(ncol(g)-2)+2)
+grid.draw(g)
+```
+
+We may also access and modify individual cells, e.g. to highlight a value.
 
 ```{r highlight}
 g <- tableGrob(iris[1:4, 1:3])
@@ -99,7 +113,7 @@ find_cell <- function(table, row, col, name="core-fg"){
 ind <- find_cell(g, 3, 2, "core-fg")
 ind2 <- find_cell(g, 2, 3, "core-bg")
 g$grobs[ind][[1]][["gp"]] <- gpar(fontsize=15, fontface="bold")
-g$grobs[ind2][[1]][["gp"]] <- gpar(fill="darkolivegreen1", lwd=5)
+g$grobs[ind2][[1]][["gp"]] <- gpar(fill="darkolivegreen1", col = "darkolivegreen4", lwd=5)
 grid.draw(g)
 ```
 
