--- a/vignettes/tableGrob.rmd
+++ b/vignettes/tableGrob.rmd
@@ -104,15 +104,22 @@ grid.newpage()
 grid.arrange(haligned, valigned, ncol=2)
 ```
 
+### Borders and separators
+
 Other grobs such as separating lines may be added.
 
 ```{r separators}
 g <- tableGrob(iris[1:4, 1:3], theme=ttheme_minimal())
 separators <- replicate(ncol(g) - 2, 
-                     segmentsGrob(x1 = unit(0,"npc")), 
+                     segmentsGrob(x1 = unit(0, "npc")), 
                      simplify=FALSE)
+## add vertical lines on the left side of columns (after 2nd)
 g <- gtable::gtable_add_grob(g, grobs = separators, 
                      t = 1, b = nrow(g), l = seq_len(ncol(g)-2)+2)
+## add rectangular box around table core
+g <- gtable::gtable_add_grob(g, 
+                             grobs = rectGrob(gp=gpar(fill=NA)), 
+                     t = 2, b = nrow(g), l = 2, r=ncol(g))
 grid.draw(g)
 ```
 
