--- a/vignettes/tableGrob.rmd
+++ b/vignettes/tableGrob.rmd
@@ -63,6 +63,17 @@ grid.arrange(
   nrow=1)
 ```
 
+If the formatting parameters are shorter than the number of cells, they are recycled along columns,
+```{r recycling}
+t1 <- ttheme_default(core=list(
+        fg_params=list(fontface=c(rep("plain", 4), "bold.italic")),
+        bg_params = list(fill=c(rep(c("grey95", "grey90"),
+                                    length.out=4), "#6BAED6"))
+        ))
+
+grid.table(iris[1:5, 1:3], theme = t1)
+```
+
 ## Text justification
 
 The text labels can be justified; the default is "centre" for the core, header, and row names. These settings can be adjusted by passing the relevant parameters of `textGrob` via the theme nested lists,
