--- a/vignettes/tableGrob.rmd
+++ b/vignettes/tableGrob.rmd
@@ -68,7 +68,8 @@ If the formatting values are fewer than the number of cells, they are recycled a
 t1 <- ttheme_default(core=list(
         fg_params=list(fontface=c(rep("plain", 4), "bold.italic")),
         bg_params = list(fill=c(rep(c("grey95", "grey90"),
-                                    length.out=4), "#6BAED6"))
+                                    length.out=4), "#6BAED6"),
+                         alpha = rep(c(1,0.5), each=5))
         ))
 
 grid.table(iris[1:5, 1:3], theme = t1)
